@@ -61,6 +61,19 @@ int Store_u7_comboid(unsigned char *data, int xtiles, int ytiles,
 void Get_u7_comboid(unsigned char *data, int& xtiles, int& ytiles,
 	int& tiles_right, int& tiles_below, int& cnt, U7_combo_data *& ents);
 
+// Put these here since they are shared between XWin and Win32
+
+typedef void (*Move_shape_handler_fun)(int shape, int frame, int x, int y,
+					int prevx, int prevy, bool show);
+typedef void (*Move_combo_handler_fun)(int xtiles, int ytiles, int tiles_right,
+	int tiles_below, int x, int y, int prevx, int prevy, bool show);
+typedef void (*Drop_shape_handler_fun)(int shape, int frame, int x, int y,
+							void *data);
+typedef void (*Drop_chunk_handler_fun)(int chunk, int x, int y, void *data);
+typedef void (*Drop_combo_handler_fun)(int cnt, struct U7_combo_data *combo, 
+					int x, int y, void *data);
+
+
 
 #endif
 
